Implement header and components for our places

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 
-<h1>Some other H1</h1>
-<div class="container"><h1>Hello</h1></div>
+<bwm-header></bwm-header>
+<div class="container pt-5">
+  <router-outlet></router-outlet>
+</div>
+
