--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,11 @@ html, body {
 html, body, p {
   color: $dark-grey-color;
 }
+
+.rent-listings-page {
+  .title {
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+}
