--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import 'book-colors';
-
+@import 'forms';
 html, body {
   height: 100%;
 }
@@ -15,5 +15,34 @@ html, body, p {
     font-size: 30px;
     font-weight: bold;
     margin-bottom: 20px;
+  }
+}
+
+.type {
+  &-apartment {
+    color: #a72da3 !important;
+  }
+  &-house {
+    color: #bf1818 !important;
+  }
+  &-condo {
+    color: #d68000 !important;
+  }
+}
+
+.btn.book-btn-main {
+  border-color: $dark-red-color;
+  color: $dark-red-color;
+
+  &:hover,&:focus,&:active {
+    background-color: $dark-red-color;
+    border-color: $dark-red-color;
+    color: white;
+    box-shadow: none;
+  }
+  &:disabled {
+    cursor: auto;
+    background-color: transparent;
+    color: $dark-red-color;
   }
 }
