--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,14 +14,19 @@
               type="email"
               class="form-control"
               id="email">
-            <!-- <div class="alert alert-danger">
-              <div>
+            <div
+              *ngIf="email.invalid && !email.pristine"
+              class="alert alert-danger">
+              <div *ngIf="email.errors.required">
                 Email is required.
               </div>
-              <div>
+              <div *ngIf="email.errors.forbiddenEmail">
+                This email is not allowed.
+              </div>
+              <div *ngIf="email.errors.pattern">
                 Must be valid email format!
               </div>
-            </div> -->
+            </div>
           </div>
           <div class="form-group">
             <label for="password">Password</label>
@@ -30,11 +35,22 @@
               type="password"
               class="form-control"
               id="password">
+            <div
+              *ngIf="password.invalid && !password.pristine"
+              class="alert alert-danger">
+              <div *ngIf="password.errors.required">
+                Password is required.
+              </div>
+              <div *ngIf="password.errors.minlength">
+                Minimum length of password is 6 characters!
+              </div>
+            </div>
           </div>
           <button
             (click)="login()"
+            [disabled]="loginForm.invalid"
             type="submit"
-            class="btn bwm-btn-main">Submit</button>
+            class="btn book-btn-main">Submit</button>
         </form>
         <!-- <div *ngIf="errors.length > 0" class="alert alert-danger">
           <p *ngFor="let error of errors">
