--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,3 +1,4 @@
+
 <section id="register">
   <div class="bwm-form">
     <div class="row">
@@ -32,6 +33,7 @@
               #email="ngModel"
               required
               [pattern]="emailPattern"
+              [forbiddenEmail]="'imihic@tvz.hr'"
               name="email"
               type="email"
               class="form-control"
@@ -39,6 +41,9 @@
             <div *ngIf="email.invalid && email.pristine === false" class="alert alert-danger">
               <div *ngIf="email.errors.required">
                 Email is required!
+              </div>
+              <div *ngIf="email.errors.forbiddenEmail">
+                Email is not allowed!
               </div>
               <div *ngIf="email.errors.pattern">
                 Email format is not valid!
@@ -92,7 +97,7 @@
           <button
             (click)="register(registerForm)"
             type="submit"
-            class="btn book-btn-main">Submit</button>
+            class="btn bwm-btn-main">Submit</button>
           <!-- <button
             [disabled]="registerForm.invalid"
             (click)="register()"
