--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-5">
         <h1 class="page-title">Register</h1>
-        <form #registerForm="ngForm">
+        <form #registerForm="ngForm" [sameAs]="['password', 'passwordConfirmation']">
           <div class="form-group">
             <label for="username">Username</label>
             <input
@@ -92,6 +92,9 @@
               <div *ngIf="passwordConfirmation.errors.minlength">
                 Password Confirmation must be at least 6 characters long!
               </div>
+            </div>
+            <div *ngIf="registerForm.errors?.sameAs && !passwordConfirmation.pristine" class="alert alert-danger">
+              Password confirmation must be the same as password!
             </div>
           </div>
           <button
